--- a/mobile/src/main/res/layout/content_l_weather.xml
+++ b/mobile/src/main/res/layout/content_l_weather.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical|left"
+                android:gravity="center"
                 android:includeFontPadding="false"
                 android:lines="1"
                 android:text="青岛市-李沧区"
